# MTITM

./: .gitignore  CMakeLists.txt  README.md
include/: clientpacket.h  genericpacket.h  mtclient.h  mtserver.h  proxy.h  serverpacket.h  util.h
src/: genericpacket.c  main.c  mtclient.c  mtserver.c  proxy.c  util.c
srp/: srp.c
